# canteen

./: README.md  canteen.py  pyproject.toml  test_canteen.py
src/canteen/: __init__.py
